# RCubeSolver

./: .gitignore  Makefile  Open with PyCharm.bat  README.md  cube.py  move_interpreter.py  pochmann_solver_old_probably_kill_with_fire.py  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
app/: __main__.py  block.py  cube.py  method_BLD_Pochmann.py  method_BLD_old_Pochmann.py  move_interpreter.py
docs/: class_diagram.drawio
integration_test/: test_pochmann_solver.py
src/: __main__.py  alg_converter.py  alg_lookup.py  block.py  cube.py  method_BLD_old_Pochmann.py  move_interpreter.py  move_translator.py  pochmann.py  pochmann_translator.py  reducer.py  solver.py
src/rcube/: __main__.py  __main__old.py  alg_lookup.py  algorithm.py  algortihm.py  block.py  cube.py  cube_interface.py  cube_printer.py  logger.py  move_interpreter.py  move_lookup.py  move_translator.py  pochmann.py  pochmann_solver.py  pochmann_translator.py  reducer.py  run.py  scrambler.py  settings.py  solver.py  sticker_lookup.py
src/rcube/tools/: bld_cube_constructor.py
tests/: test_alg_converter.py  test_alg_lookup.py  test_block.py  test_cube.py  test_cube_interface.py  test_move_interpreter.py  test_move_translator.py  test_pochmann_solver.py  test_pochmann_translater.py  test_reducer.py  test_solver.py  test_sticker_lookup.py
